# TPSS

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  proceeding.sh
TPSS/: CMakeLists.txt  Plaplace_fdss_tbb.cc  Tlaplace_check_iterations.cc  Tlaplace_integrator_cp.cc  Tlaplace_integrator_mf.cc  Tlaplace_integrator_vp.cc  Tmlaplace_check_iterations.cc  Tpatch_info_01.cc  Tpatch_info_mpi.cc  Ttensors_01.cc  cell_coloring.cc  coloring.h  ct_parameter.py.in  laplace_integrator.h  laplace_problem.h  linelasticity_eqdata.h  linelasticity_integrator.h  linelasticity_manufactured_force.nb  linelasticity_problem.h  mesh.h  mlaplace_integrator.h  mlaplace_problem.h  multigrid.h  paper_poisson.cc  paper_poisson.py.in  poisson.cc  poisson.h  poisson_distorted.cc  postprocess.h  proceeding_elasticity_diagonly.cc  rt_parameter.h  test_mesh.cc  test_poisson.cc  utilities.h  vertex_patch_coloring.cc
apps/: CMakeLists.txt  app_utilities.h  bell_stokes_manufactured_load.nb  biharmonic_c0ip.cc  biharmonic_integrator.h  biharmonic_optdamping.cc  biharmonic_problem.h  coloring.h  common_integrator.h  equation_data.h  laplace_integrator.h  laplace_problem.h  linelasticity.cc  linelasticity_diagonly.cc  linelasticity_integrator.h  linelasticity_problem.h  linelasticity_sipg.cc  mesh.h  mlaplace.cc  mlaplace_integrator.h  mlaplace_problem.h  multigrid.h  poisson.cc  poisson.h  poisson_distorted.cc  poisson_manufactured_loads.nb  poisson_mpiscaling.cc  poisson_optdamping.cc  poisson_problem.h  poisson_robin.cc  poisson_standard.cc  poisson_standard.h  postprocess.h  preconditioner.h  rt_parameter.h  simplified_stokes_DGQkplus1_DGPk.cc  simplified_stokes_Qkplus1_DGPk.cc  simplified_stokes_raviartthomas.cc  simplified_stokes_raviartthomasstream.cc  solver.h  (+16 more)
bwunicluster/: run.r1.base  run.r1.make
include/solvers_and_preconditioners/TPSS/: TPSS.h  TPSS.templates.h  alignedlinalg.h  block_matrix.h  block_matrix.templates.h  dof_info.h  dof_info.templates.h  fd_evaluation.h  fd_evaluation.templates.h  fe_evaluation_patch.h  generic_functionalities.h  kroneckersvd.h  kroneckersvd_new.h  mapping_info.h  mapping_info.templates.h  matrix_free_connect.h  matrix_free_connect.templates.h  matrix_helper.h  matrix_helper.templates.h  matrix_utilities.h  move_to_deal_ii.h  patch_dof_worker.h  patch_dof_worker.templates.h  patch_info.h  patch_info.templates.h  patch_mf_worker.h  patch_transfer.h  patch_transfer.templates.h  patch_worker.h  patch_worker.templates.h  schwarz_smoother_data.h  subdomain_handler.h  subdomain_handler.templates.h  tensor_indices.h  tensor_product_matrix.h  tensor_product_matrix.templates.h  tensor_product_matrix_new.h  tensor_product_matrix_new.templates.h  tensors.h  time_info.h  (+1 more)
include/solvers_and_preconditioners/preconditioner/: preconditioner_base.h  schwarz_preconditioner.h  schwarz_preconditioner.templates.h
include/solvers_and_preconditioners/smoother/: schwarz_smoother.h  smoother_richardson.h
old/TPSS/: CMakeLists.txt  Plaplace_fdss.cc  Plaplace_fdss.h  Tlaplace_integrator_vp.cc  Tlinelasticity_integrator_fd.cc  Tpatch_info_mpi.cc  Tpatch_transfer_02.cc  cell_coloring.cc  linelasticity.cc  linelasticity_problem.h  mesh.h  mpi_coloring.cc  paper_hermite.cc  paper_poisson.sh  run_tests.sh
old/apps/: mlaplace_integrator.h  poisson.cc  poisson.h  poisson_standard.h
old/tests/: Tblock_matrix_diagonal_01.cc  Tlaplace_integrator_cp.cc  Tlinelasticity_integrator_fd.cc  Tpatch_info_mpi.cc
palmetto-cluster/: run.r1.base  run.r1.make
scripts/: ct_parameter.py.in  dealii-setup.sh  env.sh.in  find_files_per_regex.py  generate_exec.py.in  linelasticity_sipg.py.in  mpi_scaling.py  orgmode_to_csv.py  plot_biharmeigenfunctions.py  poisson_distorted.py.in  refind_files.py  run_exec.py.in  simlap_env.sh.in  table.org  tpss-setup-ninja.sh  tpss-setup.sh  trilinos-setup.sh
scripts/bwfordev/: run.base  run.make
scripts/bwfordev/poisson_cfem/: run.base  run.make
scripts/bwfordev/poisson_mpiscaling/: run.base  run.make
scripts/bwunicluster/: run.r1.make
scripts/bwunicluster2/: run.base.sh  run.broadwell.make.sh  run.make.sh  run_q7.make.sh
tests/: CMakeLists.txt  Tkroneckersvd.cc  Tlaplace_check_iterations.cc  Tlaplace_geometry.cc  Tlaplace_integrator_vp.cc  Tlinelasticity_integrator_fd.cc  Tlinelasticity_integrator_mf.cc  Tmlaplace_integrator.cc  Tpatch_transfer_01.cc  Tpoisson_check_iterations.cc  apps_biharmonic.cc  apps_biharmonic_integrator.cc  apps_coloring.cc  apps_laplace_integrator.cc  apps_linelasticity.cc  apps_linelasticity.h  apps_linelasticity_integrator.cc  apps_poisson.cc  apps_stokes_integrator.cc  apps_stokes_raviartthomas_all.cc  block_matrix.cc  block_matrix_base.cc  kroneckersvd.cc  kroneckersvd_new.cc  local_mesh_loop.cc  patch_transfer.cc  tensor_product_matrix.cc  tensor_product_matrix_new.cc  tensors.cc  test_utilities.h
